# MasterProject

./: .gitignore  Cargo.toml  README.md  benchmark_config.json  benchmark_graphs.ods  dependencies.sh  echarts.js  numa_cleaned.js  numa_larency_2.js  numa_latency_1.js  scraps.md  todo
benches/: criterion_benchmark.rs
graphs/: collect_all.js  scheduling.js  scheduling_all_chunks.out  scheduling_single_chunk.out
graphs/cache_misses/: cache_misses.out  cache_misses_a_3_3.out  cache_misses_all_2_2.out  cache_misses_b_3_3.out
graphs/core_mapping_measurements/: mapping_a_12_sch.out  mapping_a_2_sch.out  mapping_a_4_sch.out  mapping_a_8_sch.out  mapping_b_12_sch.out  mapping_b_2_sch.out  mapping_b_4_sch.out  mapping_b_8_sch.out  mapping_c_12_sch.out  mapping_c_2_sch.out  mapping_c_4_sch.out  mapping_c_8_sch.out  mapping_sequential.out
graphs/presentation/: cache_latency.js  core_mapping_impact.js  latency_breakdown.js  throughput_simple_results.js
profiling/: v2_timings.txt  v2_timings_measurements  v2_timings_measurements_2.yml
profiling/AWS/: AWS_blake_16_15.out  AWS_blake_22_8.out  AWS_blake_8_22.out  AWS_sha256_16_15.out  AWS_sha256_22_8.out  AWS_sha256_8_22.out  AWS_sha512_16_15.out  AWS_sha512_22_8.out  AWS_sha512_8_22.out
report/graphs/: advanced_prototype_hashmap_more_schedulers.out  advanced_prototype_transfer_more_schedulers.out  base.js  batch_size_transfer_0.out  new_collect_hashmap_more_schedulers.out  new_collect_transfer_more_schedulers.out
report/graphs/advanced scheduling/: fibonacci.js  hashmap_10.js  hashmap_10_few_buckets.js  hashmap_50.js  hashmap_50_breakdown.js  hashmap_50_few_buckets.js  scheduling_performance.js  transfer_0.js  transfer_0_breakdown.js  transfer_50.js
report/graphs/basic scheduling/: fibonacci.js  hashmap_10.js  hashmap_10_few_buckets.js  hashmap_50.js  hashmap_50_breakdown.js  hashmap_50_few_buckets.js  scheduling_performance.js  transfer_0.js  transfer_50.js  (+2 more)
results/: Collect.results  Immediate.results  more_benchmarks.out
results/new_scheduling_benchmark/: dhashmap.out  dhashmap_more_reads.out  micro_bench_numa_large.out  micro_benchmark_scheduling  micro_benchmarks.out  numa_results.js  transfer_workloads_new_scheduling.out  transfer_workloads_old_scheduling.out
results/recv/: batch_size_1.out  batch_size_2.out  batch_size_3.out  tx_size_1.out  tx_size_2.out  tx_size_3.out  workloads_1.out  workloads_2.out  workloads_3.out  workloads_warmup.out
results/results/: all.out  parallel_collect.out  parallel_immediate.out  pieces.out  res.out  sequential.out
results/testing_new_hashes_and_pieces/: test_latency.rs  test_latency_2.rs  test_nb_rounds.rs
src/: applications.rs  auction.rs  baseline_vm.rs  basic_vm.rs  benchmark.rs  best_fit.rs  client.rs  config.rs  contract.rs  d_hash_map.rs  key_value.rs  lib.rs  main.rs  micro_benchmark.rs  node.rs  parallel_vm.rs  profiling  sequential_vm.rs  transaction.rs  utils.rs  vm.rs  vm_a.rs  vm_b.rs  vm_c.rs  vm_implementation.rs  vm_utils.rs  voting.rs  wip.rs  worker_implementation.rs
(+43 files in other folders)
