[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hwloc = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
anyhow = "1.0"
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
#hotmic = "0.8.2"
either = "1.8.1"
#metrics = "0.20.1"
#metrics-exporter-tcp = "0.7.0"
async-trait = "0.1.64"
num-traits = "0.2.15"
#ratelimit = "0.5.1"
bloomfilter = "1.0.9"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false