[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hwloc = "0.5.0"
hwloc2 = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
anyhow = "1.0"
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
#hotmic = "0.8.2"
either = "1.8.1"
#metrics = "0.20.1"
#metrics-exporter-tcp = "0.7.0"
async-trait = "0.1.64"
num-traits = "0.2.15"
#ratelimit = "0.5.1"
bloomfilter = "1.0.9"
libnuma = "0.0.4"
rand = "0.8.5"
async-recursion = "1.0.2"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.15"
core_affinity = "0.8.0"
ed25519-dalek = "1.0.1"
rayon = "1.7.0"
thincollections = "0.5.3"
nohash-hasher = "0.2.0"
tinyset = "0.4.15"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
itertools = "0.10.5"
futures = "0.3.27"
strum = { version = "0.24.1", features = ["derive"] }
nom = "7.1.3"
tabled = "0.12.0"
hashbrown = "0.13.2"
ahash = "0.8.3"
blake3 = "1.3.3"
sha256 = "1.1.3"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio", "async_futures"]}

[[bench]]
name = "criterion_benchmark"
harness = false
bench = true
